[package]
name = "psilo-vfs"
description = "Virtual filesystem layer intended for games. Store data in archives, in ROM, in your executable, on the filesystem, or in some unholy combination. Part of the Psilo game engine but may be more generally applicable."
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.5"
once_cell = "1.8"
unicode-normalization = "0.1.19"
psilo-vfs-pathmacro = {path = "pathmacro"}
log = "0.4"

[features]
default = ["stdpaths", "fs", "rom"]
fs = []
rom = []
stdpaths = []
